# SZE-MOSZE-2020-Lekodolhatok--Closed

./: Hero.cpp  Hero.h  JSON.cpp  JSON.h  Makefile  Monster.cpp  Monster.h  README.md  annotated.html  autotoc_md0.html  character.cpp  character.h  character_8h_source.html  classCharacter-members.html  classCharacter.html  classCharacters.html  classJson-members.html  classJson.html  classes.html  doxyconf  files.html  functions.html  functions_func.html  functions_rela.html  graph_legend.html  index.html  jsonparser.cpp  jsonparser.h  jsonparser_8h_source.html  main.cpp  md_README.html  md_report.html  menudata.js  pages.html  player.cpp  player.h  report.md  run-test.sh
.github/workflows/: 2-feladat.yml  JsonTest.yml  UnitAndJsonTest.yml  doxygen.yml
monsters/: Monster1.json  Zombie.json
scenario/: scenario1.json  scenario2.json
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  related_0.js  searchdata.js
test/: CMakeLists.txt  check.txt  jsonTest.cpp  jsonTest.txt  unitTest.cpp
units/: kakarott.json  makarott.json  vakarott.json
